--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>---->Coming Soon<----</title>
 </head>
 <body>
-    <h2 draggable="true">Coming Soon!</h2>
-    
+    <h2 draggable="true">Tezliklə!</h2>
+
 </body>
 </html>
