--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>---->Tezliklə!<----</title>
 </head>
 <body>
+    <img src="./pictures/Systems and technology programming company logo (3).png" alt="">
     <h2 draggable="true">Tezliklə!</h2>
 
 </body>
