--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="icon" href="/pictures/Systems and technology programming company logo (3).png">
+    <link rel="icon" type="icon" sizes="32x32" href="/pictures/Systems and technology programming company logo (3).png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>---->Tezliklə!<----</title>
+    <title>Tezliklə!</title>
 </head>
 <body>
     <img src="./pictures/Systems and technology programming company logo (3).png" alt="">
