--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="icon" sizes="32x32" href="/pictures/Systems and technology programming company logo (3).png">
+    <link rel="icon" type="icon"  href="/pictures/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tezliklə!</title>
 </head>
 <body>
-    <img src="./pictures/Systems and technology programming company logo (3).png" alt="">
+    <img src="./pictures/Systems and technology programming company logo (3).png" alt="Picture not found. Please contact me!">
     <h2 draggable="true">Tezliklə!</h2>
 
 </body>
