--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="yandex-verification" content="55b957129d37b350" />
     <meta charset="UTF-8">
     <link rel="icon" type="icon"  href="/pictures/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
